# OOP_4Laba

./: CMakeLists.txt  main.cpp
include/: array.hpp  concept.hpp  figure.hpp  point.hpp  rectangle.hpp  square.hpp  triangle.hpp
test/: test.cpp
